After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 756561 - qtdemux: fix caps leak
qtdemux: fix caps leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.6.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-10-14 10:04 UTC by Guillaume Desmottes
Modified: 2015-10-17 08:04 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
qtdemux: fix caps leak (1.27 KB, patch)
2015-10-14 10:04 UTC, Guillaume Desmottes
committed Details | Review

Description Guillaume Desmottes 2015-10-14 10:04:31 UTC
.
Comment 1 Guillaume Desmottes 2015-10-14 10:04:48 UTC
Created attachment 313251 [details] [review]
qtdemux: fix caps leak

If the QtDemuxStream are re-used they may already have caps which used
to be leaked.

Reproduced using the
validate.dash.playback.seek_forward.dash_exMPD_BIP_TC1 validate
scenario.
Comment 2 Sebastian Dröge (slomo) 2015-10-14 11:42:50 UTC
Comment on attachment 313251 [details] [review]
qtdemux: fix caps leak

commit 360a6509c7c59c73113ad3cc818f5935cceffd4b
Author: Guillaume Desmottes <guillaume.desmottes@collabora.co.uk>
Date:   Wed Oct 14 12:03:15 2015 +0200

    qtdemux: fix caps leak
    
    If the QtDemuxStream are re-used they may already have caps which used
    to be leaked.
    
    Reproduced using the
    validate.dash.playback.seek_forward.dash_exMPD_BIP_TC1 validate
    scenario.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=756561